--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,9 +15,16 @@
 	<name>jobFinder</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
+	<dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-dependencies</artifactId>
+            <version>Hoxton.SR10</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
@@ -66,6 +73,7 @@
     <artifactId>bcrypt</artifactId>
     <version>0.9.0</version>
 </dependency>
+	
 	</dependencies>
 
 	<build>
